--- a/hyprland.conf
+++ b/hyprland.conf
@@ -76,6 +76,7 @@ exec-once = /usr/lib/pam_kwallet_init
 exec-once = /home/mike/bin/bar -r
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
+exec-once = otd-daemon
 exec-once = copyq --start-server
 # exec-once = otd-daemon
 exec-once = swww-daemon
@@ -156,8 +157,9 @@ general {
 }
 plugin {
     hyprscrolling {
-        column_width = 0.8
+        column_width = 0.9
         fullscreen_on_one_column = true
+				focus_fit_method = 0
     }
 }
 # https://wiki.hypr.land/Configuring/Variables/#decoration
@@ -241,7 +243,7 @@ workspace = special:notes, animation:slide 20%
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in he nkeybinds section below
     preserve_split = true # You probably want this
 }
 
@@ -268,7 +270,7 @@ input {
     special_fallthrough = true
 
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -302,12 +304,13 @@ bind = $mainMod, SPACE, exec, $bin/bar -s
 bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
 bind = $mainMod SHIFT, F, fullscreen
-bind = $mainMod SHIFT, L, exec, hyprlock
+# bind = $mainMod SHIFT, L, exec, hyprlock
 bind = , Print, exec, grimblast --freeze save output - | satty --filename -
 # Screenshot region and pipe to swappy for editing
 bind = ,Print, exec, hyprshot -m region --raw | swappy -f -
 
-
+bind = , XF86Back, layoutmsg, colresize +conf
+bind = , XF86Forward, layoutmsg, colresize -conf
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod Alt, KP_End, exec, thunar
@@ -327,10 +330,18 @@ bind = $mainMod Ctrl, left, movecurrentworkspacetomonitor, l
 bind = $mainMod Ctrl, right, movecurrentworkspacetomonitor, r
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
+bind = $mainMod, h, exec, best_keys.sh left
+bind = $mainMod, l, exec, best_keys.sh right
+bind = ALT, h, focusmonitor, 0
+bind = ALT, l, focusmonitor, 1
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+bind = $mainMod SHIFT, l, layoutmsg, movewindowto r
+bind = $mainMod SHIFT, h, layoutmsg, movewindowto l
+bind = $mainMod SHIFT, k, layoutmsg, movewindowto u
+bind = $mainMod SHIFT, j, layoutmsg, movewindowto d
+bind = $mainMod Ctrl, l, layoutmsg, swapcol r
+bind = $mainMod Ctrl, h, layoutmsg, swapcol l
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -343,12 +354,6 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-bind = $mainMod, period, layoutmsg, move +col
-bind = $mainMod, comma, layoutmsg, move -col
-bind = $mainMod SHIFT, period, layoutmsg, movewindowto r
-bind = $mainMod SHIFT, comma, layoutmsg, movewindowto l
-bind = $mainMod SHIFT, up, layoutmsg, movewindowto u
-bind = $mainMod SHIFT, down, layoutmsg, movewindowto d
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -419,25 +424,47 @@ source = ~/.config/hypr/my_sources/specialWorkspaces.conf
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # NOTE: Workspace Rules 
+
 # workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = match:class Thunar float
-windowrule = match:class com.github.hluk.copyq float
-windowrule = match:class mpv float
-windowrule = match:class photoqt float
-windowrule = match:class thunar float
-windowrule = match:class file-jpeg float
-windowrule = match:class Darktable float
-windowrule = match:class com.github.hluk.copyq size 50% 95% 
-windowrule = match:class Thunar size 50% 50%
-windowrule = match:class org.qutebrowser.qutebrowser workspace 1
-windowrule = match:class live_server monitor:DVI-D-1 special:notes
-windowrule = match:class Conky noblur
+windowrule = float, class:Thunar
+windowrule = float, class:com.github.hluk.copyq
+windowrule = float, class:mpv
+windowrule = float, class:photoqt
+windowrule = float, class:thunar
+windowrule = float, class:file-jpeg
+windowrule = float, class:Darktable
+windowrule = float, title:ExitScript
+windowrule = size 384px 128px, title:ExitScript
+windowrule = float, title:"Save File"
+windowrule = float, title:org.musicbrainz.Picard
+windowrule = size 50% 50%, title:org.musicbrainz.Picard
+windowrule = float,title:live_server, monitor:DVI-D-1, special:notes
 
-windowrule = match:title "Save File" float
-windowrule = match:title org.musicbrainz.Picard float
-windowrule = match:title org.musicbrainz.Picardsize 50% 50%
-windowrule = match:title ExitScript float
+windowrule = float, title:hyprConf
+windowrule = float, title:fishConf
+windowrule = float, title:kittyConf
+windowrule = float, title:nvimConf
+windowrule = float, title:wayConf
+windowrule = float, title:binConf
+windowrule = float, title:devConf
+windowrule = float, title:ncmpcppConf
+# windowrule = float, match:class Thunar, float
+# windowrule = float, match:class com.github.hluk.copyq
+# windowrule = match:class mpv float
+# windowrule = match:class photoqt float
+# windowrule = match:class thunar float
+# windowrule = match:class file-jpeg float
+# windowrule = match:class Darktable float
+# windowrule = match:class Thunar size 50% 50%
+# windowrule = match:class org.qutebrowser.qutebrowser workspace 1
+# windowrule = match:class live_server monitor:DVI-D-1 special:notes
+# windowrule = match:class Conky noblur
+#
+# windowrule = match:title "Save File" float
+# windowrule = match:title org.musicbrainz.Picard float
+# windowrule = match:title org.musicbrainz.Picardsize 50% 50%
+# windowrule = match:title ExitScript float
 
-windowrule = match:class * suppressevent maximize
+# windowrule = match:class * suppressevent maximize
 # Fix some dragging issues with XWayland
