--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -15,30 +15,29 @@ workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[floa
 bind = ,XF86Tools, togglespecialworkspace, mpdClient
 bind = ,XF86Tools, exec, resize_center.sh 95% 90%
 
-# music
-workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='yazi' -e yazi
-bind = ,KP_End, togglespecialworkspace, my_yazi
-bind = ,KP_End, exec, resize_center.sh 95% 92%
-
 workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
 bind = ,XF86Mail, togglespecialworkspace, email
 bind = ,XF86Mail, exec, resize_center.sh 95% 95%
+# filemanagers
+workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='yazi' -e yazi
+bind = $mainMod, e, togglespecialworkspace, my_yazi
+bind = $mainMod, e, exec, resize_center.sh 95% 92%
 
 workspace = special:fm, rounding:false, monitor:0, on-created-empty:[float; size 65% 65%;] thunar
-bind = $mainMod, e, togglespecialworkspace, fm
-bind = $mainMod, e, exec, resize_center.sh 65% 65%
+bind = $mainMod SHIFT, e, togglespecialworkspace, fm
+bind = $mainMod SHIFT, e, exec, resize_center.sh 65% 65%
 
 # notes
-workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 95%; move 54% 3.5%] kitty --title='notes' -e nvim /home/mike/md_notes/index.md
+workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 92%; move 54% 3.5%] kitty --title='notes' -e nvim /home/mike/md_notes/index.md
 bind = ,XF86HomePage, togglespecialworkspace, notes
 bind = ,XF86HomePage, focusmonitor, HDMI-A-1
 bind = ,XF86HomePage, centerwindow
-bind = ,XF86HomePage, moveactive, 690 0
+bind = ,XF86HomePage, moveactive, 635 20
 
-workspace = special:my_copy, rounding:false, on-created-empty:[float; size 50% 80%] copyq toggle
-bind = , KP_Begin, focusmonitor, HDMI-A-1
-bind = , KP_Begin, togglespecialworkspace, my_copy
-bind = , KP_Begin, exec, resize_center.sh 90% 95%
+workspace = special:my_copy, rounding:false, on-created-empty:[float; size 90% 95%] copyq toggle
+bind = Ctrl, x, focusmonitor, HDMI-A-1
+bind = Ctrl, x, togglespecialworkspace, my_copy
+bind = Ctrl, x, exec, resize_center.sh 90% 95%
 
 # drop down terminal
 workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='term_util' -e tmux new -s UTILITY
@@ -47,12 +46,6 @@ bind = SHIFT, KP_Up, setfloating
 bind = , KP_Up, exec, resize_center.sh 98% 98%
 bind = SHIFT, KP_Up, movetoworkspace, special:term_util
 
-workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='updater' -e paru -Syu --noconfirm
+workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] updater_window.sh
 bind = $mainMod SHIFT, U, togglespecialworkspace, updater
 
-# Dark Table
-workspace = special:photoqt, rounding:false, monitor:0, on-created-empty:[size 95% 95%] photoqt
-bind = ,KP_Down, setfloating
-bind = ,KP_Down, exec, resize_center.sh 98% 98%
-bind = ,KP_Down, togglespecialworkspace, photoqt
-bind = SHIFT ,KP_Down, movetoworkspace, special:photoqt
