--- a/my_sources/submaps.conf
+++ b/my_sources/submaps.conf
@@ -1,11 +1,29 @@
 $smc = exec, /home/mike/.config/hypr/scripts/smc
 
+# --------------------------------------------
+bind = $mainMod, C, submap, configs
+submap = configs
+
+bind = , b, exec, smc -n "kitty --title "binConf" -e nvim /home/mike/bin/"
+bind = , d, exec, smc -n "kitty --title "devConf" -e nvim /home/mike/dev/"
+bind = , h, exec, smc -n "kitty --title "hyprConf" -e nvim /home/mike/.config/hypr/"
+bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/"
+bind = , k, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/kitty/"
+bind = , n, exec, smc -n "kitty --title "nvimConf" -e nvim /home/mike/.config/nvim/"
+bind = SHIFT, n, exec, smc -n "kitty --title "ncmpcppConf" -e nvim /home/mike/.config/ncmpcpp/"
+bind = , w, exec, smc -n "kitty --title "wayConf" -e nvim /home/mike/.config/hypr/waybar/"
+bind = $mainMod, C, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+# --------------------------------------------
+
 bind = $mainMod, O, submap, opacity
 submap = opacity
 
 bind = , 0, setprop, active, alpha 1.0
 bind = , 1, setprop, active, alpha 0.1
-bind = , 2, setprop, active, alpha 0.2
+bind = , 2, setprop, active, alpha 0.2k
 bind = , 3, setprop, active, alpha 0.3
 bind = , 4, setprop, active, alpha 0.4
 bind = , 5, setprop, active, alpha 0.5
@@ -13,11 +31,11 @@ bind = , 6, setprop, active, alpha 0.6
 bind = , 7, setprop, active, alpha 0.7
 bind = , 8, setprop, active, alpha 0.8
 bind = , 9, setprop, active, alpha 0.9
-
 bind = , o, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
+# --------------------------------------------
 bind = $mainMod, G, submap, group
 submap = group
 
@@ -26,31 +44,19 @@ bind = , g, togglegroup
 bind = , o, submap, reset
 bind = , escape, submap, reset
 submap = reset
-
+# --------------------------------------------
 
 bind = $mainMod, A, submap, apps
-# bind = $mainMod ALT, M, exec, notify-send "Supmap (Master) active"
-
-# Start the 'resize' submap definition
 submap = apps
 
-# Define binds within the 'resize' submap for resizing windows
-# 'binde' allows for repeatable binds when held
-
-# trying to conform n to focus next, shift + n to swap with next windownext
-# swap focus to next and previous windows
-bind = , b, exec, smc -n qutebrowser
+bind = , q, exec, smc -n qutebrowser
+bind = , b, exec, smc -n google-chrome-stable
+bind = , i, exec, smc -n inkscape
 bind = , k, exec, smc -n krita
-bind = , p, exec, smc -h 'layoutmsg cycleprev'
-bind = , n, exec, smc -n 'ghostty --title="my_notes" -e nvim /home/mike/notes/index.norg'
-bind = , g, exec, smc -n 'ghostty --title="gemini_win"'
-
-# Define a bind to exit the 'resize' submap and return to the global submap
 bind = $mainMod, A, submap, reset
-bind = $mainMod, Print, exec, hyprshot --clipboard-only -m region --freeze
-# End the 'resize' submap definition and return to the global submap
 bind = , escape, submap, reset
 submap = reset
+# --------------------------------------------
 
 bind = $mainMod, W, submap, worspaces_sm
 submap = worspaces_sm
@@ -61,14 +67,11 @@ bind = , 2, movetoworkspace, 12
 bindr = , 2, submap, reset 
 bind = , escape, submap, reset
 submap = reset
+# --------------------------------------------
 
 # will switch to a submap called resize
 bind = $mainMod, R, submap, resize
-
-# will start a submap called "resize"
 submap = resize
-
-# sets repeatable binds for resizing the active window
 binde = , right, resizeactive, 10 0
 binde = , right, centerwindow
 binde = , left, resizeactive, -10 0
@@ -86,8 +89,6 @@ binde = , k, resizeactive, 0 -100
 binde = , k, centerwindow
 binde = , j, resizeactive, 0 100
 binde = , j, centerwindow
-# use reset to go back to the global submap
 bind = , escape, submap, reset
-
-# will reset the submap, which will return to the global submap
 submap = reset
+# --------------------------------------------
