--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,45 +2,6 @@
 # Hyprland Kickstart #
 ######################
 
-# THE PURPOSE
-
-# The concept here is simple enough, I have attmpted to create
-# a set of config files that meets the need of providing all the 
-# hyprland specific options in one place.
-
-# What you Should find is a very basic configuration file that
-# works. It should be simple and boring, and ready for you to
-# change it into whatever yuu want it to be.
-
-# This gives you the option of starting from scratch, but not
-# having to find answers in varius places on the web. The
-# hyprland wiki is great, but it can still cause problems for 
-# people new to the act of configuration.
-
-# THE LAYOUT
-
-# Any line that starts with a '#' is not operational. To make a
-# command operational, delete the '# ' at the beginning of the line.
-# I made an effort to include all settings from the hyprland wiki
-# in this configuration. (if you know something is missing me,
-# please let me know ion the github repository where you downloaded
-# this)
-
-# For reference, the '#' at the beginning means the line is
-# "commented out". Removing the "# " is "uncommenting the line".
-
-# So, try a command out by uncommenting the line. If you don't like
-# it, comment it out again.
-# for settings with numeric values, you will find the default in
-# the descriptive comment above it, in case you want to revert to
-# the original default value.
-
-
-# NOTE: Monitors
-
-# See https://wiki.hypr.land/Configuring/Monitors/
-# monitor=,preferred,auto,auto
-source = /home/mike/.config/hypr/monitors.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -49,10 +10,17 @@ source = /home/mike/.config/hypr/monitors.conf
 # See https://wiki.hypr.land/Configuring/Keywords/
 # Set programs that you use
 $terminal = kitty
+$run = kitty -e 
 $fileManager = kitty --title="yazi" -e yazi
 # $menu = pkill wofi || wofi --show drun
-$menu = pkill fuzzel || fuzzel --terminal="kitty -e"
+$mainMod = SUPER # Sets "Windows" key as main modifier
 
+source = ~/.config/hypr/sources/monitors.conf
+source = ~/.config/hypr/sources/submaps.conf
+source = ~/.config/hypr/sources/specialWorkspaces.conf
+source = ~/.config/hypr/sources/windowrules.conf
+source = ~/.config/hypr/sources/autostart.conf
+source = ~/.config/hypr/sources/look_and_feel.conf
 
 #for libadwaita gtk4 apps you can use this command:
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
@@ -64,26 +32,6 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme "Arc-Darker"   # for 
 #you will need to set dark theme for qt apps from kde more difficult thans with gnome :D:
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
 # Hyprland
-#################
-### AUTOSTART ###
-#################
-
-exec-once = syncthing
-exec-once = hyprctl dismissnotify
-exec-once = hyprpm reload -n
-exec-once = /usr/lib/pam_kwallet_init
-# exec-once = gnome-keyring-daemon --start
-exec-once = /home/mike/bin/bar -r
-exec-once = systemctl --user start hyprpolkitagent
-exec-once = hypridle
-exec-once = otd-daemon
-exec-once = copyq --start-server
-# exec-once = otd-daemon
-exec-once = swww-daemon
-exec-once = sleep 1 && /home/mike/.config/hypr/listeners/submap_listen.sh
-exec-once = copyq
-exec-once = tmux new -s -d UTILITY
-
 ############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -111,174 +59,6 @@ env = HYPRCURSOR_SIZE,24
 # permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
 
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hypr.land/Configuring/Variables/
-
-# https://wiki.hypr.land/Configuring/Variables/#general
-general {
-    # gaps_in	gaps between windows, also supports css style gaps (top, right, bottom, left -> 5,10,15,20)
-    # gaps_out	gaps between windows and monitor edges, also supports css style gaps (top, right, bottom, left -> 5,10,15,20)
-    # single digit specifies that top,left,bottom,right will all have the same gaps.
-    
-    border_size = 1
-
-    # disable borders for floating windows
-
-    gaps_in = 1
-    gaps_out = 3,2,4,2
-    float_gaps = 5 10 15 20
-
-
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-    # Default layout choices are 'dwindle' and 'master'. More layouts available via plugin.
-    layout = scrolling
-    # snap is for floating windows and whether or not they should stick
-    # at the edges of the monitor and other windows<D-Bslash>
-    snap {
-    	enabled = true
-	window_gap = 10
-	monitor_gap = 10
-	# if true, windows snap such that only one border’s worth of space is between them
-	border_overlap = false
-	# if true, snapping will respect gaps between windows(set in general:gaps_in)
-	respect_gaps = false
-    }
-}
-plugin {
-    hyprscrolling {
-        column_width = 0.9
-        fullscreen_on_one_column = true
-				focus_fit_method = 0
-    }
-}
-# https://wiki.hypr.land/Configuring/Variables/#decoration
-decoration {
-    rounding = 4
-    rounding_power = 2
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    dim_special = 0.0
-
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
-
-    # https://wiki.hypr.land/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 14
-        passes = 3
-		xray = true
-		ignore_opacity = false
-		special = false
-		popups = true
-		popups_ignorealpha = 0.6
-		new_optimizations = true
-		brightness = 1
-		noise = 0.2
-		contrast = 1
-		input_methods = true
-		input_methods_ignorealpha = 0.8
-
-        vibrancy = 0.1696
-    }
-}
-
-# https://wiki.hypr.land/Configuring/Variables/#animations
-animations {
-    enabled = yes, please :)
-
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.25, easeOutQuint, slidefadevert -25%
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
-}
-
-# Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-workspace = w[tv1], gapsout:0, gapsin:0
-workspace = f[1], gapsout:0, gapsin:0        # Slide the media special workspace from the right
-workspace = special:notes, animation:slide 20%
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in he nkeybinds section below
-    preserve_split = true # You probably want this
-}
-
-    # allow_small_split = true
-
-# https://wiki.hypr.land/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
-
-
-#############
-### INPUT ###
-#############
-
-# https://wiki.hypr.land/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model = XMEIDAPALM 
-    kb_options = caps:escape_shifted_capslock
-    kb_rules =
-    special_fallthrough = true
-
-
-    follow_mouse = 0
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    touchpad {
-        natural_scroll = false
-    }
-}
-
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 # gestures {
 #     workspace_swipe = false
@@ -297,29 +77,28 @@ $bin = /home/mike/.dotFiles/bin/
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
 # personal bind
 bind = $mainMod SHIFT, SPACE, exec, $bin/bar -b
+bind = $mainMod SHIFT, P, exec, $bin/pwm
+bind = $mainMod SHIFT, M, exec, $bin/mail
 bind = $mainMod, SPACE, exec, $bin/bar -s
 bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
 bind = $mainMod SHIFT, F, fullscreen
 # bind = $mainMod SHIFT, L, exec, hyprlock
-bind = , Print, exec, grimblast --freeze save output - | satty --filename -
 # Screenshot region and pipe to swappy for editing
-bind = ,Print, exec, hyprshot -m region --raw | swappy -f -
 
 bind = , XF86Back, layoutmsg, colresize +conf
 bind = , XF86Forward, layoutmsg, colresize -conf
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
+bind = $mainMod SHIFT, Return, exec, $terminal
 bind = $mainMod Alt, KP_End, exec, thunar
 bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh
 # bind = $mainMod, E, exec, thunar
 bind = $mainMod, f, togglefloating
-bind = $mainMod, m, exec, rofi -show drun
+bind = $mainMod, m, exec, pkill wofi || wofi
 bind = $mainMod, b, exec, wp_random.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # ndwindle
@@ -330,19 +109,49 @@ bind = $mainMod Ctrl, left, movecurrentworkspacetomonitor, l
 bind = $mainMod Ctrl, right, movecurrentworkspacetomonitor, r
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, h, exec, best_keys.sh left
-bind = $mainMod, l, exec, best_keys.sh right
-bind = ALT, h, focusmonitor, 0
-bind = ALT, l, focusmonitor, 1
+# bind = $mainMod, h, exec, best_keys.sh left
+# bind = $mainMod, l, exec, best_keys.sh right
+bind = $mainMod, h, layoutmsg, move -col
+bind = $mainMod, l, layoutmsg, move +col
+bind = $mainMod SHIFT Ctrl, h, focusmonitor, 0
+bind = $mainMod SHIFT Ctrl, l, focusmonitor, 1
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
-bind = $mainMod SHIFT, l, layoutmsg, movewindowto r
-bind = $mainMod SHIFT, h, layoutmsg, movewindowto l
-bind = $mainMod SHIFT, k, layoutmsg, movewindowto u
-bind = $mainMod SHIFT, j, layoutmsg, movewindowto d
-bind = $mainMod Ctrl, l, layoutmsg, swapcol r
-bind = $mainMod Ctrl, h, layoutmsg, swapcol l
+bind = $mainMod Ctrl, l, layoutmsg, movewindowto r
+bind = $mainMod Ctrl, h, layoutmsg, movewindowto l
+bind = $mainMod Ctrl, k, layoutmsg, movewindowto u
+bind = $mainMod Ctrl, j, layoutmsg, movewindowto d
+bind = $mainMod SHIFT, l, layoutmsg, swapcol r
+bind = $mainMod SHIFT, h, layoutmsg, swapcol l
 
+bind = $mainMod, tab, submap, workspaces
+submap = workspaces
+
+bind = , 1, workspace, 1
+bind = , 2, workspace, 2
+bind = , 3, workspace, 3
+bind = , 4, workspace, 4
+bind = , 5, workspace, 5
+bind = , 6, workspace, 6
+bind = , 7, workspace, 7
+bind = , 8, workspace, 8
+bind = , 9, workspace, 9
+bind = , 0, workspace, 10
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind =  SHIFT, 1, movetoworkspace, 1
+bind =  SHIFT, 2, movetoworkspace, 2
+bind =  SHIFT, 3, movetoworkspace, 3
+bind =  SHIFT, 4, movetoworkspace, 4
+bind =  SHIFT, 5, movetoworkspace, 5
+bind =  SHIFT, 6, movetoworkspace, 6
+bind =  SHIFT, 7, movetoworkspace, 7
+bind =  SHIFT, 8, movetoworkspace, 8
+bind =  SHIFT, 9, movetoworkspace, 9
+bind =  SHIFT, 0, movetoworkspace, 10
+
+bind = , w, submap, reset
+bind = , escape, submap, reset
+submap = reset
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -365,16 +174,6 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# # https://github.com/Duckonaut/split-monitor-workspaces
-# bind = $mainMod, T, split-changemonitor, next
-# bind = $mainMod SHIFT, T, split-changemonitorsilent, next
-#
-# bind = $mainMod, 1, split-workspace, 1
-# bind = $mainMod, 2, split-workspace, 2
-# bind = $mainMod, 3, split-workspace, 3
-# bind = $mainMod, 4, split-workspace, 4
-# bind = $mainMod, 5, split-workspace, 5
 
 bind = SUPER SHIFT, KP_End, focusworkspaceoncurrentmonitor, 1
 
@@ -406,65 +205,13 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-bind = $mainMod, print, exec, grim -g "$(slurp)" - | swappy -f - -o -
-
-source = ~/.config/hypr/sources/layouts.conf
-source = ~/.config/hypr/my_sources/submaps.conf
-source = ~/.config/hypr/my_sources/specialWorkspaces.conf
-
+bind = , print, exec, grim -g "$(slurp)" - | swappy -f - -o -
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# NOTE: Workspace Rules 
-
-# workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = float, class:Thunar
-windowrule = float, class:com.github.hluk.copyq
-windowrule = float, class:mpv
-windowrule = float, class:photoqt
-windowrule = float, class:thunar
-windowrule = float, class:file-jpeg
-windowrule = float, class:Darktable
-windowrule = float, title:ExitScript
-windowrule = size 384px 128px, title:ExitScript
-windowrule = float, title:"Save File"
-windowrule = float, title:org.musicbrainz.Picard
-windowrule = size 50% 50%, title:org.musicbrainz.Picard
-windowrule = float,title:live_server, monitor:DVI-D-1, special:notes
-
-windowrule = float, title:hyprConf
-windowrule = float, title:fishConf
-windowrule = float, title:kittyConf
-windowrule = float, title:nvimConf
-windowrule = float, title:wayConf
-windowrule = float, title:binConf
-windowrule = float, title:devConf
-windowrule = float, title:ncmpcppConf
-# windowrule = float, match:class Thunar, float
-# windowrule = float, match:class com.github.hluk.copyq
-# windowrule = match:class mpv float
-# windowrule = match:class photoqt float
-# windowrule = match:class thunar float
-# windowrule = match:class file-jpeg float
-# windowrule = match:class Darktable float
-# windowrule = match:class Thunar size 50% 50%
-# windowrule = match:class org.qutebrowser.qutebrowser workspace 1
-# windowrule = match:class live_server monitor:DVI-D-1 special:notes
-# windowrule = match:class Conky noblur
-#
-# windowrule = match:title "Save File" float
-# windowrule = match:title org.musicbrainz.Picard float
-# windowrule = match:title org.musicbrainz.Picardsize 50% 50%
-# windowrule = match:title ExitScript float
-
-# windowrule = match:class * suppressevent maximize
-# Fix some dragging issues with XWayland
+# NOTE:  workspace rules
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0        # Slide the media special workspace from the right
+workspace = special:notes, animation:slide 20%
