--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor =
-    path = /home/mike/wallpaper/ashford-marx-KI6pbzLas8w-unsplash.jpg
+    path = /home/mike/wallpaper/treemountain.jpg
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
@@ -13,30 +13,30 @@ background {
     vibrancy_darkness = 0.0
 }
 
-shape {
-    monitor = HDMI-A-1
-    size = 740, 740
-    color = rgba(0, 0, 0, 0.0) # no fill
-    rounding = 20 # circle
-    border_size = 4
-    border_color = rgba(0, 0, 0, .5)
-    halign = center
-    valign = top
-    position = 0, -60
-}
+# shape {
+#     monitor = HDMI-A-1
+#     size = 740, 740
+#     color = rgba(0, 0, 0, 0.0) # no fill
+#     rounding = 20 # circle
+#     border_size = 4
+#     border_color = rgba(0, 0, 0, .5)
+#     halign = center
+#     valign = top
+#     position = 0, -80
+# }
 
-shape {
-    monitor = HDMI-A-1
-    size = 440, 135
-    color = rgba(0, 0, 0, 0.0) # no fill
-    rounding = -1 # circle
-    border_size = 4
-    border_color = rgba(1, 185, 185, 1.0)
-    halign = center
-    valign = top
-    position = 0, -80
-
-}
+# shape {
+#     monitor = HDMI-A-1
+#     size = 440, 135
+#     color = rgba(0, 0, 0, 0.0) # no fill
+#     rounding = 0 # circle
+#     border_size = 4
+#     border_color = rgba(1, 185, 185, 1.0)
+#     halign = center
+#     valign = top
+#     position = 0, -100
+# 
+# }
 
 label {
   monitor = HDMI-A-1
@@ -46,20 +46,35 @@ label {
   halign = center
   valign = top
   color = rgb(0, 0, 0)
-  position = 0, -100
+  position = 0, -280
 }
 
 image {
-    monitor =
-    path = /home/mike/Documents/huck.jpg
+    monitor = HDMI-A-1
+    path = /home/mike/Pictures/JulianLock.jpeg
     size = 300 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
+    rounding = 0 # negative values mean circle
     border_size = 2  
     border_color = rgb(221, 221, 221)
     rotate = 0 # degrees, counter-clockwise
     reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
     reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
+    position = 0, 100
+    halign = center
+    valign = center
+    shadow_passes = 1
+}
 
+image {
+    monitor = DVI-D-1
+    path = /home/mike/Pictures/Julian/julian.jpg
+    size = 300 # lesser side if not 1:1 ratio
+    rounding = 0 # negative values mean circle
+    border_size = 2  
+    border_color = rgb(221, 221, 221)
+    rotate = 0 # degrees, counter-clockwise
+    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
+    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
     position = 0, 100
     halign = center
     valign = center
@@ -68,7 +83,7 @@ image {
 
 
 input-field {
-    monitor =
+    monitor = HDMI-A-1
     size = 200, 50
     outline_thickness = 1
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
@@ -94,7 +109,7 @@ input-field {
     invert_numlock = false # change color if numlock is off
     swap_font_color = false # see below
 
-    position = 0, -120
+    position = 0, -160
     halign = center
     valign = center
 }
