--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -4,7 +4,7 @@ $smc = exec, /home/mike/.config/hypr/scripts/smc
 bind = $mainMod, C, submap, configs
 submap = configs
 
-bind = , b, exec, smc -n "kitty --title "binConf" -e nvim /home/mike/bin/"
+bind = , b, exec, smc -n "kitty --title "binConf" -e tmux && nvim /home/mike/bin/"
 bind = , d, exec, smc -n "kitty --title "devConf" -e nvim /home/mike/dev/"
 bind = , h, exec, smc -n "kitty --title "hyprConf" -e nvim /home/mike/.config/hypr/"
 bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/"
@@ -58,15 +58,6 @@ bind = , escape, submap, reset
 submap = reset
 # --------------------------------------------
 
-bind = $mainMod, W, submap, worspaces_sm
-submap = worspaces_sm
-bind = $mainMod, W, submap, reset
-bind = , 1, movetoworkspace, 11
-bindr = , 1, submap, reset 
-bind = , 2, movetoworkspace, 12
-bindr = , 2, submap, reset 
-bind = , escape, submap, reset
-submap = reset
 # --------------------------------------------
 
 # will switch to a submap called resize
